2012-08-03  Sergio Carlos Morales Angeles  <carloschilazo@gmail.com>

        Delete text from password does nothing.
        https://bugs.webkit.org/show_bug.cgi?id=92040

        Reviewed by Ryosuke Niwa.

        Added regression test for password field content delete.

        * editing/deleting/password-delete-contents-expected.txt: Added.
        * editing/deleting/password-delete-contents.html: Added.

2012-08-03  Zan Dobersek  <zandobersek@gmail.com>

        Unreviewed GTK gardening, adding text failure expectations for 20 MathML
        Presentation tests that started failing after r124512.

        * platform/gtk/TestExpectations:

2012-08-03  Jan Keromnes  <janx@linux.com>

        Web Inspector: Make textModel private to textEditor
        https://bugs.webkit.org/show_bug.cgi?id=92999

        Reviewed by Pavel Feldman.

        Tests no longer access textModel directly from sourceFrame.

        * http/tests/inspector/debugger-test.js:
        (initialize_DebuggerTest):
        * http/tests/inspector/live-edit-test.js:
        (initialize_LiveEditTest.InspectorTest.replaceInSource):
        (initialize_LiveEditTest):
        * inspector/debugger/pause-in-inline-script.html:
        * inspector/debugger/script-formatter.html:
        * inspector/debugger/source-url-comment.html:

2012-08-03  Yuta Kitamura  <yutak@chromium.org>

        Unreviewed, test expectation change only.

        * platform/chromium/TestExpectations: Merge a couple of tests into an existing bug.

2012-08-03  János Badics  <jbadics@inf.u-szeged.hu>

        [Qt] Unreviewed gardening after r124549. Skipped a newly added failing test.
        https://bugs.webkit.org/show_bug.cgi?id=93074

        * platform/qt/Skipped:

2012-08-03  Alexander Pavlov  <apavlov@chromium.org>

        [Chromium] Unreviewed, skip appcache abort() tests.

        * platform/chromium/TestExpectations:

2012-08-03  Joone Hur  <joone.hur@intel.com>
