@@ -21,6 +21,8 @@ http://example.com/cat.jpeg
 data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAEIAAABCAgMAAACeOuh7AAAABGdBTUEAAK/INwWK6QAAAAlQTFRF////AAAA////fu+PTwAAAAF0Uk5TAEDm2GYAAACHSURBVDjLxdLbDYAgDAVQGELn0R3oEHYf2KGdUqtE46OFRCP3oyTng1xCnWsaD5JRRtCkQ2YmkBkHRXqWJBn0j0TICbrsWVoWhRShCdcGyZCtHxMaUnVPRZ9KSbmBJdsX2vJVnwqRD0Rb4rpzgIbE/AI5NTnWAMvy5l0dXrfuLh5OCe5BmmYGXhTUxlQ5xJ8AAAAASUVORK5CYII=
 javascript:alert('foo');
 null
+blob:http%3A//example.com/f91b7b00-00-0000-0000-3b7c87055d7a
+blob:http%3A//example.com/f91b7b00-00-0000-0000-3b7c87055d7a
 Link for a URI from CSS document:
 webkit-html-resource-link inspector/styles/resources/fromcss.png
 Link for a URI from iframe inline stylesheet:
