@@ -1,3 +1,15 @@
+2012-08-03  Alexander Pavlov  <apavlov@chromium.org>
+
+        Web Inspector: Incorrect blob url href when inspecting
+        https://bugs.webkit.org/show_bug.cgi?id=93076
+
+        Reviewed by Vsevolod Vlasov.
+
+        Special-cased the "blob" scheme to return the original URL intact on completion.
+
+        * inspector/front-end/ResourceUtils.js:
+        (WebInspector.completeURL):
+
 2012-08-03  Yury Semikhatsky  <yurys@chromium.org>
 
         Web Inspector: add CSSRule memory instrumentation
